@@ -18,7 +18,7 @@ noinst_HEADERS = acct.h array.h assertions.h attribute.h batch_request.h \
 		 resizable_array.h hash_table.h mom_hierarchy.h \
 		 dynamic_string.h mom_server.h alps_constants.h \
 		 alps_functions.h login_nodes.h track_alps_reservations.h \
-		 net_cache.h user_info.h hash_map.h exiting_jobs.h
+		 net_cache.h user_info.h hash_map.h exiting_jobs.h mom_job_cleanup.h
 
 BUILT_SOURCES = site_job_attr_def.h site_job_attr_enum.h \
 		site_qmgr_node_print.h site_qmgr_que_print.h \
