@@ -66,7 +66,9 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - Additional fix for TRQ-1472. In rm_request on the mom pbs_tcp_timeout was
       getting set to 0 which made it so the MOM would fail reading incoming data 
       if it had not already arrived. This would cause momctl -to fail with an
-      end of file message. 
+      end of file message.
+  e - Add a safety net to resend any obits for exiting jobs on the mom that still
+      haven't cleaned up after five minutes. TRQ-1458.
 
 4.1.3
   b - fix a security loophole that potentially allowed an interactive job to run 
